# Email_Composer_Agent

./: README.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/api/: routes.py
app/email/: formatter.py  sender.py
app/llm/: gemini_client.py
app/services/: orchestrator.py
app/templates/: index.html
app/utils/: logger.py
